<package>
  <name>flann</name>
  <version>1.7.1</version>
  <description>FLANN is a library for performing fast approximate
    nearest neighbor searches in high dimensional spaces.
    It contains a collection of algorithms we found to work
    best for nearest neighbor search and a system for
    automatically choosing the best algorithm and optimum
    parameters depending on the dataset.</description>
  <author email="mariusm@cs.ubc.ca">Marius Muja</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  
  <build_depend>cmake</build_depend>
  <build_depend>tbb</build_depend>
  <build_depend>gtest</build_depend>
  <build_depend>python</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>boost</build_depend>

  <run-depend>tbb</run-depend>
  <run-depend>gtest</run-depend>
  <run-depend>python</run-depend>
  <run-depend>python-numpy</run-depend>
  <run-depend>boost</run-depend>
</package>
