<?xml version="1.0"?>
<package>
  <name>flann</name>
  <version>1.8.4</version>
  <description>FLANN is a library for performing fast approximate
    nearest neighbor searches in high dimensional spaces.
    It contains a collection of algorithms we found to work
    best for nearest neighbor search and a system for
    automatically choosing the best algorithm and optimum
    parameters depending on the dataset.</description>
  <author email="mariusm@cs.ubc.ca">Marius Muja</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  
  <build_depend>boost</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>cmake</build_depend>
  <build_depend>gtest</build_depend>
  <build_depend>python</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>tbb</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>boost</run_depend>
  <run_depend>catkin</run_depend>
  <run_depend>gtest</run_depend>
  <run_depend>python</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>tbb</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
